--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -1,8 +1,8 @@
-FROM alpine:3.5
+FROM alpine:%%ALPINE-VERSION%%
 
 RUN apk add --no-cache ca-certificates
 
-ENV GOLANG_VERSION 1.7.5
+ENV GOLANG_VERSION %%VERSION%%
 
 # https://golang.org/issue/14851 (Go 1.8 & 1.7)
 # https://golang.org/issue/17847 (Go 1.7)
@@ -19,7 +19,7 @@ RUN set -eux; \
 	export GOROOT_BOOTSTRAP="$(go env GOROOT)"; \
 	\
 	wget -O go.tgz "https://golang.org/dl/go$GOLANG_VERSION.src.tar.gz"; \
-	echo '4e834513a2079f8cbbd357502cccaac9507fd00a1efe672375798858ff291815 *go.tgz' | sha256sum -c -; \
+	echo '%%SRC-SHA256%% *go.tgz' | sha256sum -c -; \
 	tar -C /usr/local -xzf go.tgz; \
 	rm go.tgz; \
 	\
