--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services: docker
 
 env:
   - VERSION=1.9 VARIANT=stretch
+  - VERSION=1.9 VARIANT=alpine3.7
   - VERSION=1.9 VARIANT=alpine3.6
   - VERSION=1.8 VARIANT=jessie
   - VERSION=1.8 VARIANT=stretch
